@@ -1,4 +1,4 @@
-/* $Id: proto.h,v 1.102 2010/07/18 14:10:09 htrb Exp $ */
+/* $Id: proto.h,v 1.103 2010/07/19 23:34:01 htrb Exp $ */
 /* 
  *   This file was automatically generated by version 1.7 of cextract.
  *   Manual editing not recommended.
@@ -774,6 +774,8 @@ extern void wrapToggle(void);
 #ifdef USE_BUFINFO
 extern void saveBufferInfo(void);
 #endif
+
+extern Str getLinkNumberStr(int correction);
 
 extern void dispVer(void);
 
